Remove redundant path specifications

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,10 +131,10 @@ install(EXPORT ${OPENVSLAM_TARGETS_EXPORT_NAME}
         DESTINATION ${OPENVSLAM_CONFIG_INSTALL_DIR})
 
 # Set standard installation directories
-set(RUNTIME_DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
-set(LIBRARY_DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
-set(ARCHIVE_DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
-set(INCLUDES_DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
+set(RUNTIME_DESTINATION bin)
+set(LIBRARY_DESTINATION lib)
+set(ARCHIVE_DESTINATION lib)
+set(INCLUDES_DESTINATION include)
 
 # ----- Build selection -----
 
