Update feature extraction parameters (Remove GPL infringing code)

--- a/example/aist/fisyeye.yaml
+++ b/example/aist/fisyeye.yaml
@@ -29,7 +29,7 @@ Camera:
 # Tracking Parameters #
 #=====================#
 
-Tracking:
+Preprocessing:
   max_num_keypoints: 2000
 
 #================#
@@ -37,6 +37,7 @@ Tracking:
 #================#
 
 Feature:
+  name: "default ORB feature extraction setting"
   scale_factor: 1.2
   num_levels: 8
   ini_fast_threshold: 20
