--- a/src/openvslam/data/CMakeLists.txt
+++ b/src/openvslam/data/CMakeLists.txt
@@ -8,6 +8,7 @@ target_sources(${PROJECT_NAME}
                ${CMAKE_CURRENT_SOURCE_DIR}/landmark.h
                ${CMAKE_CURRENT_SOURCE_DIR}/graph_node.h
                ${CMAKE_CURRENT_SOURCE_DIR}/camera_database.h
+               ${CMAKE_CURRENT_SOURCE_DIR}/orb_params_database.h
                ${CMAKE_CURRENT_SOURCE_DIR}/map_database.h
                ${CMAKE_CURRENT_SOURCE_DIR}/bow_database.h
                ${CMAKE_CURRENT_SOURCE_DIR}/frame_statistics.h
@@ -17,6 +18,7 @@ target_sources(${PROJECT_NAME}
                ${CMAKE_CURRENT_SOURCE_DIR}/landmark.cc
                ${CMAKE_CURRENT_SOURCE_DIR}/graph_node.cc
                ${CMAKE_CURRENT_SOURCE_DIR}/camera_database.cc
+               ${CMAKE_CURRENT_SOURCE_DIR}/orb_params_database.cc
                ${CMAKE_CURRENT_SOURCE_DIR}/map_database.cc
                ${CMAKE_CURRENT_SOURCE_DIR}/bow_database.cc
                ${CMAKE_CURRENT_SOURCE_DIR}/frame_statistics.cc)
