--- a/example/aist/equirectangular.yaml
+++ b/example/aist/equirectangular.yaml
@@ -19,23 +19,24 @@ Camera:
 # Tracking Parameters #
 #=====================#
 
-Tracking:
+Preprocessing:
   max_num_keypoints: 2000
+  mask_rectangles:
+    - [0.0, 1.0, 0.0, 0.1]
+    - [0.0, 1.0, 0.84, 1.0]
+    - [0.0, 0.2, 0.7, 1.0]
+    - [0.8, 1.0, 0.7, 1.0]
 
 #================#
 # ORB Parameters #
 #================#
 
 Feature:
+  name: "default ORB feature extraction setting"
   scale_factor: 1.2
   num_levels: 8
   ini_fast_threshold: 20
   min_fast_threshold: 7
-  mask_rectangles:
-    - [0.0, 1.0, 0.0, 0.1]
-    - [0.0, 1.0, 0.84, 1.0]
-    - [0.0, 0.2, 0.7, 1.0]
-    - [0.8, 1.0, 0.7, 1.0]
 
 #====================#
 # Mapping Parameters #
