--- a/example/euroc/EuRoC_stereo.yaml
+++ b/example/euroc/EuRoC_stereo.yaml
@@ -56,7 +56,7 @@ StereoRectifier:
 # Tracking Parameters #
 #=====================#
 
-Tracking:
+Preprocessing:
   max_num_keypoints: 1000
   ini_max_num_keypoints: 2000
 
@@ -65,6 +65,7 @@ Tracking:
 #================#
 
 Feature:
+  name: "default ORB feature extraction setting"
   scale_factor: 1.2
   num_levels: 8
   ini_fast_threshold: 20
