--- a/example/kitti/KITTI_stereo_04-12.yaml
+++ b/example/kitti/KITTI_stereo_04-12.yaml
@@ -32,7 +32,7 @@ Camera:
 # Tracking Parameters #
 #=====================#
 
-Tracking:
+Preprocessing:
   max_num_keypoints: 2000
   ini_max_num_keypoints: 4000
 
@@ -41,6 +41,7 @@ Tracking:
 #================#
 
 Feature:
+  name: "default ORB feature extraction setting"
   scale_factor: 1.2
   num_levels: 8
   ini_fast_threshold: 12
