--- a/example/tum_rgbd/TUM_RGBD_mono_2.yaml
+++ b/example/tum_rgbd/TUM_RGBD_mono_2.yaml
@@ -30,7 +30,7 @@ Camera:
 # Tracking Parameters #
 #=====================#
 
-Tracking:
+Preprocessing:
   max_num_keypoints: 1000
   ini_max_num_keypoints: 2000
 
@@ -39,6 +39,7 @@ Tracking:
 #================#
 
 Feature:
+  name: "default ORB feature extraction setting"
   scale_factor: 1.2
   num_levels: 8
   ini_fast_threshold: 20
