--- a/example/tum_rgbd/TUM_RGBD_rgbd_3.yaml
+++ b/example/tum_rgbd/TUM_RGBD_rgbd_3.yaml
@@ -32,7 +32,7 @@ Camera:
 # Tracking Parameters #
 #=====================#
 
-Tracking:
+Preprocessing:
   max_num_keypoints: 1000
   ini_max_num_keypoints: 2000
   depthmap_factor: 5000.0 # Note: Set it to 1.0 for the rosbag format data set.
@@ -42,6 +42,7 @@ Tracking:
 #================#
 
 Feature:
+  name: "default ORB feature extraction setting"
   scale_factor: 1.2
   num_levels: 8
   ini_fast_threshold: 20
