--- a/example/tum_vi/TUM_VI_mono.yaml
+++ b/example/tum_vi/TUM_VI_mono.yaml
@@ -31,7 +31,7 @@ Camera:
 # Tracking Parameters #
 #=====================#
 
-Tracking:
+Preprocessing:
   max_num_keypoints: 1000
   ini_max_num_keypoints: 2000
 
@@ -40,6 +40,7 @@ Tracking:
 #================#
 
 Feature:
+  name: "default ORB feature extraction setting"
   scale_factor: 1.2
   num_levels: 8
   ini_fast_threshold: 20
