--- a/src/openvslam/data/CMakeLists.txt
+++ b/src/openvslam/data/CMakeLists.txt
@@ -12,6 +12,7 @@ target_sources(${PROJECT_NAME}
                ${CMAKE_CURRENT_SOURCE_DIR}/map_database.h
                ${CMAKE_CURRENT_SOURCE_DIR}/bow_database.h
                ${CMAKE_CURRENT_SOURCE_DIR}/frame_statistics.h
+               ${CMAKE_CURRENT_SOURCE_DIR}/bow_vocabulary.cc
                ${CMAKE_CURRENT_SOURCE_DIR}/common.cc
                ${CMAKE_CURRENT_SOURCE_DIR}/frame.cc
                ${CMAKE_CURRENT_SOURCE_DIR}/keyframe.cc
