--- a/src/stella_vslam/io/CMakeLists.txt
+++ b/src/stella_vslam/io/CMakeLists.txt
@@ -4,8 +4,10 @@ target_sources(${PROJECT_NAME}
                ${CMAKE_CURRENT_SOURCE_DIR}/trajectory_io.h
                ${CMAKE_CURRENT_SOURCE_DIR}/map_database_io_base.h
                ${CMAKE_CURRENT_SOURCE_DIR}/map_database_io_msgpack.h
+               ${CMAKE_CURRENT_SOURCE_DIR}/map_database_io_sqlite3.h
                ${CMAKE_CURRENT_SOURCE_DIR}/trajectory_io.cc
-               ${CMAKE_CURRENT_SOURCE_DIR}/map_database_io_msgpack.cc)
+               ${CMAKE_CURRENT_SOURCE_DIR}/map_database_io_msgpack.cc
+               ${CMAKE_CURRENT_SOURCE_DIR}/map_database_io_sqlite3.cc)
 
 # Install headers
 file(GLOB HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
