--- a/package.xml
+++ b/package.xml
@@ -22,6 +22,7 @@
     <depend>libg2o</depend>
     <depend>libopencv-dev</depend>
     <depend>yaml-cpp</depend>
+    <depend>libsqlite3-dev</depend>
 
     <export>
         <build_type>cmake</build_type>
