--- a/src/stella_vslam/CMakeLists.txt
+++ b/src/stella_vslam/CMakeLists.txt
@@ -191,6 +191,7 @@ add_subdirectory(data)
 add_subdirectory(feature)
 add_subdirectory(initialize)
 add_subdirectory(io)
+add_subdirectory(marker_model)
 add_subdirectory(match)
 add_subdirectory(module)
 add_subdirectory(optimize)
