Update docker env to use aruco

--- a/Dockerfile.socket
+++ b/Dockerfile.socket
@@ -109,6 +109,12 @@ RUN set -x && \
   wget -q https://github.com/opencv/opencv/archive/${OPENCV_VERSION}.zip && \
   unzip -q ${OPENCV_VERSION}.zip && \
   rm -rf ${OPENCV_VERSION}.zip && \
+  wget -q https://github.com/opencv/opencv_contrib/archive/refs/tags/${OPENCV_VERSION}.zip -O opencv_contrib-${OPENCV_VERSION}.zip && \
+  unzip -q opencv_contrib-${OPENCV_VERSION}.zip && \
+  rm -rf opencv_contrib-${OPENCV_VERSION}.zip && \
+  mkdir extra && \
+  mv opencv_contrib-${OPENCV_VERSION}/modules/aruco extra && \
+  rm -rf opencv_contrib-${OPENCV_VERSION} && \
   cd opencv-${OPENCV_VERSION} && \
   mkdir -p build && \
   cd build && \
@@ -121,6 +127,7 @@ RUN set -x && \
     -DBUILD_OPENEXR=OFF \
     -DBUILD_PERF_TESTS=OFF \
     -DBUILD_TESTS=OFF \
+    -DBUILD_PROTOBUF=OFF \
     -DBUILD_opencv_apps=OFF \
     -DBUILD_opencv_dnn=OFF \
     -DBUILD_opencv_ml=OFF \
@@ -130,6 +137,7 @@ RUN set -x && \
     -DWITH_EIGEN=ON \
     -DWITH_FFMPEG=ON \
     -DWITH_OPENMP=ON \
+    -DOPENCV_EXTRA_MODULES_PATH=/tmp/extra \
     .. && \
   make -j${NUM_THREADS} && \
   make install && \
