--- a/example/tum_rgbd/TUM_RGBD_rgbd_3.yaml
+++ b/example/tum_rgbd/TUM_RGBD_rgbd_3.yaml
@@ -55,6 +55,7 @@ Feature:
 Mapping:
   baseline_dist_thr: 0.07471049682
   redundant_obs_ratio_thr: 0.9
+  num_obs_thr: 3
 
 #===========================#
 # PangolinViewer Parameters #
