--- a/example/tum_vi/TUM_VI_stereo.yaml
+++ b/example/tum_vi/TUM_VI_stereo.yaml
@@ -80,6 +80,7 @@ Feature:
 Mapping:
   baseline_dist_thr: 0.10108726432
   redundant_obs_ratio_thr: 0.9
+  num_obs_thr: 3
 
 #========================#
 # Initializer Parameters #
