--- a/src/stella_vslam/solve/CMakeLists.txt
+++ b/src/stella_vslam/solve/CMakeLists.txt
@@ -6,13 +6,11 @@ target_sources(${PROJECT_NAME}
                ${CMAKE_CURRENT_SOURCE_DIR}/fundamental_solver.h
                ${CMAKE_CURRENT_SOURCE_DIR}/essential_solver.h
                ${CMAKE_CURRENT_SOURCE_DIR}/pnp_solver.h
-               ${CMAKE_CURRENT_SOURCE_DIR}/sim3_solver.h
                ${CMAKE_CURRENT_SOURCE_DIR}/common.cc
                ${CMAKE_CURRENT_SOURCE_DIR}/homography_solver.cc
                ${CMAKE_CURRENT_SOURCE_DIR}/fundamental_solver.cc
                ${CMAKE_CURRENT_SOURCE_DIR}/essential_solver.cc
-               ${CMAKE_CURRENT_SOURCE_DIR}/pnp_solver.cc
-               ${CMAKE_CURRENT_SOURCE_DIR}/sim3_solver.cc)
+               ${CMAKE_CURRENT_SOURCE_DIR}/pnp_solver.cc)
 
 # Install headers
 file(GLOB HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
