--- a/src/stella_vslam/optimize/CMakeLists.txt
+++ b/src/stella_vslam/optimize/CMakeLists.txt
@@ -6,11 +6,13 @@ target_sources(${PROJECT_NAME}
                ${CMAKE_CURRENT_SOURCE_DIR}/transform_optimizer.h
                ${CMAKE_CURRENT_SOURCE_DIR}/graph_optimizer.h
                ${CMAKE_CURRENT_SOURCE_DIR}/global_bundle_adjuster.h
+               ${CMAKE_CURRENT_SOURCE_DIR}/terminate_action.h
                ${CMAKE_CURRENT_SOURCE_DIR}/pose_optimizer.cc
                ${CMAKE_CURRENT_SOURCE_DIR}/local_bundle_adjuster.cc
                ${CMAKE_CURRENT_SOURCE_DIR}/transform_optimizer.cc
                ${CMAKE_CURRENT_SOURCE_DIR}/graph_optimizer.cc
-               ${CMAKE_CURRENT_SOURCE_DIR}/global_bundle_adjuster.cc)
+               ${CMAKE_CURRENT_SOURCE_DIR}/global_bundle_adjuster.cc
+               ${CMAKE_CURRENT_SOURCE_DIR}/terminate_action.cc)
 
 # Install headers
 file(GLOB HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
