Option to improve determinism by making the tracker wait until the mapper has finished processing all keyframes  (#293)
This option is enabled by running cmake with -DDETERMINISTIC=ON (default is OFF).

--- a/src/stella_vslam/CMakeLists.txt
+++ b/src/stella_vslam/CMakeLists.txt
@@ -129,6 +129,15 @@ if(USE_ARUCO)
     target_compile_definitions(${PROJECT_NAME} PUBLIC USE_ARUCO)
 endif()
 
+# Determinism
+set (DETERMINISTIC OFF CACHE BOOL "Use deterministic code")
+if (DETERMINISTIC)
+    target_compile_definitions(${PROJECT_NAME} PUBLIC DETERMINISTIC)
+    message(STATUS "Determinism: ENABLED")
+else()
+    message(STATUS "Determinism: DISABLED")
+endif()
+
 # ----- Configure stella_vslam library -----
 
 # Include directories
