--- a/Dockerfile.socket
+++ b/Dockerfile.socket
@@ -91,7 +91,7 @@ RUN set -x && \
     -DG2O_USE_CHOLMOD=OFF \
     -DG2O_USE_CSPARSE=ON \
     -DG2O_USE_OPENGL=OFF \
-    -DG2O_USE_OPENMP=ON \
+    -DG2O_USE_OPENMP=OFF \
     -DG2O_BUILD_APPS=OFF \
     -DG2O_BUILD_EXAMPLES=OFF \
     -DG2O_BUILD_LINKED_APPS=OFF \
